--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11216,16 +11216,6 @@ img {
   vertical-align: middle;
 }
 
-/* Logo */
-.logo img {
-  display: block;
-  text-decoration: none;
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 40px;
-  width: auto;
-}
-
 /* Service */
 .service-list .card {
   background: #000;
@@ -11285,19 +11275,15 @@ img {
   position: relative;
 }
 
-/* 隱藏 x 軸 */
-/* Hide scrollbar for Chrome, Safari and Opera */
 .enterprise-list::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
 .enterprise-list {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
-/* 偽元素創造左右兩邊的陰影 */
 .enterprise-list::after,
 .enterprise-list::before {
   content: "";
@@ -11360,6 +11346,93 @@ img {
   background-color: #fff;
 }
 
+/* RWD */
+@media (max-width: 768px) {
+  .grass-icon {
+    width: 117px;
+  }
+}
+@media (max-width: 376px) {
+  .recommend .card {
+    padding: 20px;
+  }
+  .sitemap .sitemap-list {
+    order: 1;
+  }
+  .sitemap .logo {
+    order: 0;
+    margin-bottom: 20px;
+  }
+}
+/* Price */
+.price-list .card {
+  background: #000;
+}
+
+.price-item {
+  width: calc(50% - 36px);
+  border: 1px solid #525252;
+  display: flex;
+  flex-direction: column;
+}
+.price-item li {
+  list-style-type: disc;
+  padding: 0px 0px;
+}
+.price-item li:not(:last-child) {
+  margin-bottom: 8px;
+}
+.price-item span {
+  font-size: 16px;
+}
+.price-item:hover {
+  border-color: #f8f9fa;
+  cursor: pointer;
+}
+.price-item .card-footer, .price-item .card-body {
+  padding: 20px 32px;
+}
+
+.mark-disc {
+  position: relative;
+  left: 16px;
+}
+
+/* FQA */
+.accordion-item {
+  border: 1px solid #525252;
+  border-radius: 16px;
+}
+.accordion-item:hover {
+  border-color: #f8f9fa;
+}
+
+.accordion-item.show {
+  border-color: #fff;
+}
+
+/* RWD */
+@media (max-width: 992px) {
+  .filter-list {
+    margin: 24px auto;
+  }
+}
+@media (max-width: 768px) {
+  .price-item {
+    width: 100%;
+  }
+}
+/* Common setting between pages */
+/* Header */
+.logo img {
+  display: block;
+  text-decoration: none;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 40px;
+  width: auto;
+}
+
 /* Tool */
 .tool-item {
   width: 416px;
@@ -11408,7 +11481,7 @@ img {
   align-items: center;
 }
 
-/* Tool-list: Search */
+/* Search */
 .search > *:focus {
   outline: none;
   box-shadow: none;
@@ -11511,6 +11584,7 @@ a.filter-active::before, a.filter-orderBy-active::before {
   border-radius: 16px;
 }
 
+/* Footer */
 /* Custimized Utility */
 .display-1 {
   display: block;
@@ -11524,15 +11598,13 @@ a.filter-active::before, a.filter-orderBy-active::before {
   white-space: pre-line;
 }
 
+/* RWD */
 @media (max-width: 992px) {
   .bg-white {
     border-radius: 20px;
   }
 }
 @media (max-width: 768px) {
-  .grass-icon {
-    width: 117px;
-  }
   .header ul {
     flex-direction: column;
     justify-content: center;
@@ -11554,74 +11626,7 @@ a.filter-active::before, a.filter-orderBy-active::before {
   }
 }
 @media (max-width: 376px) {
-  .recommend .card {
-    padding: 20px;
-  }
   .social {
     margin-bottom: 36px;
-  }
-  .sitemap .sitemap-list {
-    order: 1;
-  }
-  .sitemap .logo {
-    order: 0;
-    margin-bottom: 20px;
-  }
-}
-/* Service */
-.price-list .card {
-  background: #000;
-}
-
-.price-item {
-  width: calc(50% - 36px);
-  border: 1px solid #525252;
-  display: flex;
-  flex-direction: column;
-}
-.price-item li {
-  list-style-type: disc;
-  padding: 0px 0px;
-}
-.price-item li:not(:last-child) {
-  margin-bottom: 8px;
-}
-.price-item span {
-  font-size: 16px;
-}
-.price-item:hover {
-  border-color: #f8f9fa;
-  cursor: pointer;
-}
-.price-item .card-footer, .price-item .card-body {
-  padding: 20px 32px;
-}
-
-.mark-disc {
-  position: relative;
-  left: 16px;
-}
-
-/* FQA */
-.accordion-item {
-  border: 1px solid #525252;
-  border-radius: 16px;
-}
-.accordion-item:hover {
-  border-color: #f8f9fa;
-}
-
-.accordion-item.show {
-  border-color: #fff;
-}
-
-@media (max-width: 992px) {
-  .filter-list {
-    margin: 24px auto;
-  }
-}
-@media (max-width: 768px) {
-  .price-item {
-    width: 100%;
   }
 }/*# sourceMappingURL=all.css.map */
