Remove li::marker in chrome

--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11193,10 +11193,6 @@ a:link, a:visited {
   color: #fff;
 }
 
-li::marker {
-  content: " ";
-}
-
 *,
 *::before,
 ::after {
@@ -11235,42 +11231,6 @@ img {
   font-size: 80px;
 }
 
-/* Banner-animation */
-.banner-animation li {
-  overflow: hidden;
-}
-.banner-animation .grass-icon {
-  width: 180px;
-  height: auto;
-  position: relative;
-  animation-name: banner;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-}
-.banner-animation .grass-1 {
-  animation-delay: 0.5s;
-}
-.banner-animation .grass-2 {
-  animation-delay: 0.3s;
-}
-.banner-animation .grass-3 {
-  animation-delay: 0s;
-}
-
-@keyframes banner {
-  0% {
-    transform: translateY(100%);
-  }
-  35% {
-    transform: translateY(0%);
-  }
-  50% {
-    transform: translateY(0%);
-  }
-  100% {
-    transform: translateY(-100%);
-  }
-}
 /* Enterprise */
 .enterprise-list {
   display: flex;
@@ -11437,6 +11397,45 @@ img {
   width: auto;
 }
 
+/* Banner-animation */
+.banner-animation li {
+  overflow: hidden;
+}
+.banner-animation li::marker {
+  content: " ";
+}
+.banner-animation .grass-icon {
+  width: 180px;
+  height: auto;
+  position: relative;
+  animation-name: banner;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+.banner-animation .grass-1 {
+  animation-delay: 0.5s;
+}
+.banner-animation .grass-2 {
+  animation-delay: 0.3s;
+}
+.banner-animation .grass-3 {
+  animation-delay: 0s;
+}
+
+@keyframes banner {
+  0% {
+    transform: translateY(100%);
+  }
+  35% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
 /* Tool */
 .tool-item {
   width: 416px;
