--- a/SCSS/_components.scss
+++ b/SCSS/_components.scss
@@ -10,6 +10,47 @@
     height: 40px;
     width: auto; 
 }
+/* Banner-animation */
+.banner-animation {
+    li {
+        overflow: hidden;
+        &::marker {
+            content: " "; // Remove li marker in chrome
+        }
+    }
+    .grass-icon {
+        width: 180px;
+        height: auto;
+        position: relative;
+        animation-name: banner;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+    }
+    .grass-1 {
+        animation-delay: 0.5s;
+    }
+    
+    .grass-2 {
+        animation-delay: 0.3s;
+    }
+    .grass-3 {
+        animation-delay: 0s;
+    }
+}
+@keyframes banner {
+    0% {
+        transform: translateY(100%);
+    }
+    35% {
+        transform: translateY(0%);
+    }
+    50% {
+        transform: translateY(0%);
+    }
+    100% {
+        transform: translateY(-100%);
+    }
+}
 
 /* Tool */
 // Tool-list
