--- a/SCSS/bootstrap/_accordion.scss
+++ b/SCSS/bootstrap/_accordion.scss
@@ -25,7 +25,7 @@
     box-shadow: inset 0 ($accordion-border-width * -1) 0 $accordion-border-color;
 
     &::before {
-      background-image: url("../../img/icons/remove.png"); // Make my remove-icon
+      background-image: url("./img/icons/remove.png"); // Make my remove-icon
       transform: $accordion-icon-transform;
     }
   }
@@ -36,7 +36,7 @@
     height: $accordion-icon-width;
     margin-right: 16px;
     content: "";
-    background-image: url("../../img/icons/add.png"); // Make my add-icon
+    background-image: url("./img/icons/add.png"); // Make my add-icon
     background-repeat: no-repeat;
     background-size: $accordion-icon-width;
     @include transition($accordion-icon-transition);
