--- a/CSS/all.css
+++ b/CSS/all.css
@@ -4399,7 +4399,9 @@ textarea.form-control-lg {
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 .accordion-button:not(.collapsed)::before {
-  background-image: url("./img/icons/remove.png");
+  content: "\e15b";
+  font-family: "Material Icons";
+  font-size: 20px;
   transform: rotate(-180deg);
 }
 .accordion-button::before {
@@ -4407,8 +4409,9 @@ textarea.form-control-lg {
   width: 1.25rem;
   height: 1.25rem;
   margin-right: 16px;
-  content: "";
-  background-image: url("./img/icons/add.png");
+  content: "\e145";
+  font-family: "Material Icons";
+  font-size: 20px;
   background-repeat: no-repeat;
   background-size: 1.25rem;
   transition: transform 0.2s ease-in-out;
