--- a/SCSS/bootstrap/_accordion.scss
+++ b/SCSS/bootstrap/_accordion.scss
@@ -25,7 +25,11 @@
     box-shadow: inset 0 ($accordion-border-width * -1) 0 $accordion-border-color;
 
     &::before {
-      background-image: url("./img/icons/remove.png"); // Make my remove-icon
+      // remove-icon from google material icons
+      content: "\e15b";
+      font-family: "Material Icons"; 
+      font-size: 20px;
+      // background-image: url("../../img/icons/remove.png"); Make my remove-icon
       transform: $accordion-icon-transform;
     }
   }
@@ -35,8 +39,11 @@
     width: $accordion-icon-width;
     height: $accordion-icon-width;
     margin-right: 16px;
-    content: "";
-    background-image: url("./img/icons/add.png"); // Make my add-icon
+    // add-icon from google material icons
+    content: "\e145";
+    font-family: "Material Icons"; 
+    font-size: 20px;
+    // background-image: url("../../img/icons/add.png"); Make my add-icon
     background-repeat: no-repeat;
     background-size: $accordion-icon-width;
     @include transition($accordion-icon-transition);
